globus-gram-job-manager (14.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 21 Feb 2014 10:26:14 -0500

globus-gram-job-manager (14.1-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 12:10:35 -0500

globus-gram-job-manager (13.53-1) unstable; urgency=low

  * GT-311: globus job manager is leaking memory

 -- Globus Toolkit <support@globus.org>  Thu, 16 May 2013 11:02:30 -0400

globus-gram-job-manager (13.52-1) unstable; urgency=low

  * GT-384: GRAM mishandles long script responses

 -- Globus Toolkit <support@globus.org>  Wed, 10 Apr 2013 11:27:14 -0400

globus-gram-job-manager (13.51-1) unstable; urgency=low

  * GT-291: Reduce verbosity of INFO level debug log on GRAM

 -- Globus Toolkit <support@globus.org>  Fri, 19 Oct 2012 10:13:32 -0400

globus-gram-job-manager (13.50-1) unstable; urgency=low

  * GT-298: Leading whitespace confuses rvf parser

 -- Globus Toolkit <support@globus.org>  Thu, 11 Oct 2012 10:22:52 -0400

globus-gram-job-manager (13.49-1) unstable; urgency=low

  * GT-268: GRAM job manager seg module fails to replay first log of the month on restart
  * GT-270: job manager crash at shutdown (extra_envvar free)

 -- Globus Toolkit <support@globus.org>  Fri, 17 Aug 2012 09:38:28 -0400

globus-gram-job-manager (13.48-1) unstable; urgency=low

  * GT-253: gatekeeper and job manager don't build on hurd

 -- Globus Toolkit <support@globus.org>  Tue, 17 Jul 2012 13:50:39 -0400

globus-gram-job-manager (13.47-1) unstable; urgency=low

  * GT-212: Missing debian packages

 -- Globus Toolkit <support@globus.org>  Mon, 25 Jun 2012 15:15:41 -0400

globus-gram-job-manager (13.46-1) unstable; urgency=low

  * GT-224: Manage GRAM execution per client host for scalability for different clients

 -- Globus Toolkit <support@globus.org>  Mon, 18 Jun 2012 11:42:43 -0400

globus-gram-job-manager (13.45-1) unstable; urgency=low