@@ -1,3 +1,9 @@
+globus-io (10.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Mon, 24 Feb 2014 15:01:59 -0500
+
 globus-io (10.2-2+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
