@@ -1,3 +1,9 @@
+globus-gram-job-manager (14.2-2+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Mon, 24 Feb 2014 08:11:15 -0500
+
 globus-gram-job-manager (14.2-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
